--- a/blog_cards/style.css
+++ b/blog_cards/style.css
@@ -26,10 +26,69 @@ body {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 300px;
 }
 
 .card-header img {
   width: 100%;
   height: 200px;
   object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 20px;
+  min-height: 250px;
+}
+
+.tag {
+  background-color: #777;
+  border-radius: 50px;
+  font-size: 12px;
+  margin: 0;
+  color: #fff;
+  padding: 2px 10px;
+  text-transform: uppercase;
+}
+
+.tag-teal {
+  background-color: #92d4e4;
+}
+
+.tag-purple {
+  background-color: #3d1d94;
+}
+
+.tag-pink {
+  background-color: #c62bcb;
+}
+
+.user {
+  display: flex;
+  margin-top: auto;
+}
+
+.user img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.user-info h5 {
+  margin: 0;
+}
+
+.user-info small {
+  color: #888785;
+}
+
+@media (max-width: 940px) {
+  .container {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
 }
